--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 html, body,
 #root, .ms-Fabric {
     height: 100%;
+    overflow: hidden;
 }
 
 /* Override the default Grid component so that the content is pulled out to the edge */ 
